syntax = "proto3";

option java_package = "no.entur.mapstruct.example";
option java_outer_classname = "UserProtos";

enum EnumStatus {
  ENUM_STATUS_UNSPECIFIED = 0;
  ENUM_STATUS_STARTED = 1;
  ENUM_STATUS_STOPPED = 2;
}

message MultiNumberDTO {
  oneof number {
    int32 integer = 1;
    double floating = 2;
  }
}

message UserDTO {
  oneof OneOfDepartments {
    DepartmentDTO fire_department = 123;
    DepartmentDTO police_department = 124;
  }

  string id = 1;
  string email = 2;
  repeated DepartmentDTO main_departments = 4;
  repeated DepartmentDTO departments = 5;

  double v1 = 6;
  float v2 = 7;
  int32 v3 = 8;
  int64 v4 = 9;
  uint32 v5 = 10;
  uint64 v6 = 11;
  sint32 v7 = 12;
  sint64 v8 = 13;
  fixed32 v9 = 14;
  fixed64 v10 = 15;
  sfixed32 v11 = 16;
  sfixed64 v12 = 17;
  bool v13 = 18;
  string v14 = 19;
  bytes v15 = 20;

  EnumStatus v16 = 21;
  // google.protobuf.Any v17 = 22;

  //    oneof v18 {
  //        int32 oneofv1 = 23;
  //        double oneofv2 = 24;
  //    }

  map<string, string> stringMap = 25;
  map<string, DepartmentDTO> entityMap = 26;

  MultiNumberDTO multi_number = 27;

  UserDTO user = 28;

  repeated double rv1 = 100;
  repeated float rv2 = 101;
  repeated int32 rv3 = 102;
  repeated int64 rv4 = 103;
  repeated uint32 rv5 = 104;
  repeated uint64 rv6 = 105;
  repeated sint32 rv7 = 106;
  repeated sint64 rv8 = 107;
  repeated fixed32 rv9 = 108;
  repeated fixed64 rv10 = 109;
  repeated sfixed32 rv11 = 110;
  repeated sfixed64 rv12 = 111;
  repeated bool rv13 = 112;
  repeated string rv14 = 113;
  repeated bytes rv15 = 114;

  repeated EnumStatus rv16 = 115;
  repeated EnumStatus rv17 = 116;
  // repeated google.protobuf.Any rv17 = 116;

  repeated MultiNumberDTO rep_multi_numbers = 120;

  string non_repeatable_field_with_suffix_list = 121;

  repeated UserDTO users = 122;

}

enum PermissionDTO {
  PERMISSION_D_T_O_UNSPECIFIED = 0;
  PERMISSION_D_T_O_USER = 1;
  PERMISSION_D_T_O_ADMIN = 2;
  PERMISSION_D_T_O_NONE = 3;
}

message DepartmentDTO {
  string name = 1;
}

